Update and rename chess.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="chess.css">
+        <link rel="stylesheet" href="style.css">
         <title>chess board</title>
         
        
